--- a/rate/rate/src/app/paginas/AdcGenero/add_gen.module.css
+++ b/rate/rate/src/app/paginas/AdcGenero/add_gen.module.css
@@ -7,18 +7,18 @@
 }
 
 
-.back-button {
+.back_button {
     background-color: transparent;
     border: none;
     color: #fff;
     font-size: 35px;
     cursor: pointer;
     position: absolute;
-    top: 20px;           /* Ajuste a distância do topo conforme necessário */
+    top: 20px;           
     left: 20px; 
 }
 
-.back-button:hover {
+.back_button:hover {
     color: #ccc;
 }
 
@@ -26,28 +26,28 @@
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
-    width: 20%;
+    width: 100%; 
     height: max-content;
-    margin-bottom: 40px;
-    margin-left: 40%;
-    margin-right: 40%;
+    margin: 40px auto; 
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    margin-top: 55%;
 }
 
-h2 {
+
+.h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
-.form-container {
+.form_container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.ator-image {
+.ator_image {
     width: 210px;
     height: 200px;
     object-fit: cover;
@@ -55,17 +55,17 @@ h2 {
     border-radius: 10px;
 }
 
-form {
+.atorForm {
     width: 100%;
 }
 
-label {
+.label {
     display: block;
     margin: 10px 0 5px;
     text-align: left;
 }
 
-input {
+.input {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
@@ -75,37 +75,36 @@ input {
     color: white;
 }
 
-.button-group {
+.button_group {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
     margin: 5%;
+    
 }
 
-button {
+/* button {
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     background-color: #52057B;
     color: white;
-}
-.add{
+} */
+#add{
     padding: 3%;
-    margin: 2%;
+    font-size: 100%;
+    background-color: #52057B;
 }
 
 .ca{
     padding: 3%;
-    font-size: 90%;
-    
-    
-}
-
-button.ca {
+    font-size: 100%;
     background-color: #52057B;
+    
+    
 }
 
 .ca:hover {
@@ -123,6 +122,6 @@ button.ca {
     margin-top: -44%;
 }
 
-.form-container input[type="text"] {
+.form_container input[type="text"] {
     outline: 0;
 }
