--- a/rate/rate/src/app/paginas/AdcSugsAtor/adcSugsAtor.module.css
+++ b/rate/rate/src/app/paginas/AdcSugsAtor/adcSugsAtor.module.css
@@ -1,18 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #2C2C2C;
-    color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-}
-
 .cards {
     margin-top: -5%;
     width: 100%;
@@ -22,7 +7,7 @@ body {
 }
 
 
-.back-button {
+.back_button {
     background-color: transparent;
     border: none;
     color: #fff;
@@ -39,13 +24,11 @@ body {
 
 .container {
     height: max-content;
-    width: 35% ;
+    width: 100%;
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
-    margin-bottom: 40px;
-    margin-left: 32.5%;
-    margin-right: 32.5%;
+    margin: 40px auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,17 +38,18 @@ body {
     font-weight: bold;
 }
 
-h2 {
+
+.h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
-.form-container {
+.form_container {
     height: 90%;
     width: 90%;
 }
 
-.ator-image {
+.ator_image {
     width: 90%;
     height: 90%;
     max-width: 250px;
@@ -75,17 +59,17 @@ h2 {
     border-radius: 10px;
 }
 
-form {
+.atorForm {
     width: 100%;
 }
 
-label {
+#label {
     display: block;
     margin: 10px 0 5px;
     text-align: left;
 }
 
-input {
+.input {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
@@ -96,18 +80,14 @@ input {
 }
 
 
-button {
-    /* padding: 10px 20px; */
+/* button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
     background-color: #52057B;
     color: white;
-}
+} */
 
-button#cancel {
-    background-color: #52057B;
-}
 
 .img_classificacao{
     width: 90%;
@@ -186,25 +166,30 @@ button#cancel {
     background-color: #3f3e3e;
 }
 
-#add{
+.add{
     padding: 3%;
     margin: 2%;
+    font-size: 85%;
+    background-color: #52057B;
 }
 
-#cance{
+.cance{
     padding: 10.5%;
+    font-size: 85%;
+    margin: 2%;
+    background-color: #52057B;
     
 }
 
-#cance:hover {
+.cance:hover {
     background-color: #7e198f;
 }
 
-#add:hover {
+.add:hover {
     background-color: #7e198f;
 }
 
-.button-group {
+.button_group {
     display: flex;
     justify-content: center;
     align-items: center;
