--- a/rate/rate/src/app/paginas/AdcSugsFilmeADM/adc_sugs_filmeADM.module.css
+++ b/rate/rate/src/app/paginas/AdcSugsFilmeADM/adc_sugs_filmeADM.module.css
@@ -1,19 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.cards body {
-    font-family: Arial, sans-serif;
-    background-color: #2C2C2C;
-    color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-   
-}
-
 .cards {
 
     width: 100%;
@@ -22,7 +6,7 @@
     justify-content: flex-start;
 }
 
-.back-button {
+.back_button {
     background-color: transparent;
     border: none;
     color: #fff;
@@ -39,14 +23,14 @@
 
 
 
-:root .container {
+.container {
     
     background-color: #2C2C2C;
     display: flex;
+    margin-top: 15%;
     justify-content: center; 
     align-items: center;     
     height: 100vh;           
-    margin: 0;
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
@@ -60,17 +44,17 @@
   
   }
   
-h2 {
+.h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
-.form-container {
+.form_container {
     height: 90%;
     width: 90% ;
 }
 
-.ator-image {
+.ator_image {
     width: 90%;
     height: 90%;
     max-width: 250px;
@@ -80,17 +64,17 @@ h2 {
     border-radius: 10px;
 }
 
-form {
+#form {
     width: 100%;
 }
 
-label {
+#label {
     display: block;
     margin: 10px 0 5px;
     text-align: left;
 }
 
-input {
+#input {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
@@ -100,15 +84,15 @@ input {
     color: white;
 }
 
-button {
+/* button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
     background-color: #52057B;
     color: white;
-}
+} */
 
-button#cancelaa {
+.cancela {
     background-color: #52057B;
 }
 
@@ -144,27 +128,28 @@ button#cancelaa {
     background-color: #3f3e3e;
 }
 
-#addi {
+.addd {
     padding: 3%;
     margin: 2%;
     font-size: 85%;
     background-color: #52057B;
 }
 
-#cancelaa {
+.cancela {
     padding: 19.5%;
     font-size: 85%;
+    background-color: #52057B;
 }
 
-#cancelaa:hover {
+.cancela:hover {
     background-color: #7e198f;
 }
 
-#addi:hover {
+.addd:hover {
     background-color: #7e198f;
 }
 
-.button-group {
+.button_group {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -173,10 +158,10 @@ button#cancelaa {
     margin: 5%;
 }
 
-.form-container input[type="text"] {
+.form_container input[type="text"] {
     outline: 0;
 }
 
-.form-container input[type="date"] {
+.form_container input[type="date"] {
     outline: 0;
 }
