--- a/rate/rate/src/app/paginas/ClassFilmADM/class_filmeADM.module.css
+++ b/rate/rate/src/app/paginas/ClassFilmADM/class_filmeADM.module.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
+
+.body {
     background-color: #474747;
 }
 
@@ -156,19 +152,8 @@ body {
     width: 40px;
 }
 
-/* .bloco{
-    background-color: #737373;
-    margin-bottom: 0;
-    height: 15%;
-    width: 15%;
-    min-height: 30%
-  
-
-} */
-
-
 /* Blocos */
-.blocos_amgs {
+.filminho {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -176,36 +161,268 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 5vh ;
+    justify-content: flex-start;
+    gap: 3vh ;
+    width: 100%;
 }
 
-.info_comen {
+.seta_volta {
+    position: fixed;
+    width: 50%;
+    margin-left: -3%;
+    margin-top: -2%;
+}
+
+.black_button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 24px;
+    cursor: pointer;
+    /* margin-right: 20%; */
+    margin-left: -70%;
+    margin-top: -3%;
+}
+
+.back_button:hover {
+    color: #ccc;
+}
+
+.informacao {
+    margin-top: 5vh;
     width: 100%;
     display: flex;
+    flex-direction: row;
+}
+
+.mov_info {
+    width: 50%;
+    margin-right: 5%;
+    display: flex;
     flex-direction: column;
-    gap: 3vh;
+    gap: 4vh;
 }
 
-.comen_pes {
+.detalhes {
+    position: fixed;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.part1 {
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 2vh;
+}
+
+.par2 {
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 2vh;
+    margin-left: -20%;
+    margin-top: -40%;
+ 
+}
+
+
+.movie_titulo {
+    font-size: 28px;
+    font-family: "Montserrat", sans-serif;
+    color: #FFF;
+    margin-left: -220%;
+}
+
+.movie_ava {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.rating_strela {
+    font-size: 20px;
+    color: gold;
+    margin-left: -1000%;
+}
+
+.rating_valor {
+    font-size: 18px;
+    color: white;
+}
+
+.mov_text {
     color: #FFF;
     font-family: "Montserrat", sans-serif;
+    margin-left: -280%;
+    margin-top: 70%;
 }
 
-.comen_pes h1 {
-    font-size: 18px;
+.mov_text p {
+    margin: 5px 0;
 }
 
-.comen_amigos {
+.movi_imag {
+    width: 14vw;
+    height: 40vh;
+    background-color: #5c5c5c;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+    margin-left: -220%;
+    
+}
+
+.livr {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.mod_remov_botao {
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-left: 1%;
+    margin-bottom: 2%;
+    gap: 1vh;
+    bottom: 0;
+}
+
+.removerr {
+    width: 40%;
+    color: white;
+    border: none; 
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 25px; 
+    margin-top: 90%;
+    
+}
+
+.modificarr {
+    width: 40%;
+    color: white;
+    border: none; 
+    padding: 8px 18px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px; 
+    cursor: pointer; 
+    border-radius: 25px; 
+    margin-top: 348%;
+    margin-left: 20px;
+}
+
+.remove_botao {
+    background-color: #B60B0D;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
     color: #FFF;
-    font-family: "Montserrat", sans-serif;
-    margin-top: 5vh;
+    margin-top: 310%;
+    font-size: 85%;
+    margin-left: 80%;
 }
 
-.comen_amigos h1 {
-    font-size: 18px;
+.remove_button:hover {
+    background-color: #df1013;
 }
 
-.card_blo{
+.mod_button {
+    background-color: #737373;
+    padding: 10px;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    color: #FFF;
+}
+
+.mod_button:hover {
+    background-color: #959595;
+}
+
+.comments_secao {
+    margin-left: 10%;
+    width: 40%;
+    margin-top: 15px;
+    
+}
+
+
+  
+
+.comments_section h2 {
+    font-size: 20px;
+    margin-bottom: 15px;
+    font-family: Arial, Helvetica, sans-serif;  
+    font-size: 22px;
+    color: #FFF;
+}
+
+.coment {
+    border-radius: 15px;       
+    padding: 10px;            
+    margin-bottom: 15px;      
+    background-color: #545454; 
+    width: 85%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); 
+    padding-right: 1500%;
+}
+#adcComen{
+    width: 185%;
+    height: 45px;
+    border-radius: 15px;  
+    color: #fff; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); 
+    
+}
+
+
+.likes_count {
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+.like_icon {
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.adicionar_comment input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4a4a4a;
+    color: white;
+    margin-top: 10px;
+    padding-right: 800%;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.blocos {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -214,154 +431,14 @@ body {
     gap: 5vh;
 }
 
-.bloco {
-    background-color: #A8A8A8;
-    /* width: 9vw;
-    height: 28vh; */
-    height: 150px;
-    width: 300px;
-    border-radius: 15px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.4);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.perfi {
-    height: 80px;
-    width: 80px;
-}
-
-.bloco_in {
-    background-color: #A8A8A8;
-    width: 230px;
-    height: 120px;
-    padding: 10px;
-    
-   
-}
-.just{
-    color: #000000;
-    margin-top: 2%;
-    margin-left: 10%;
-    font-family: "Archivo Black", sans-serif;
-    font-weight: 200;
-    font-size: 15px;
-}
-
-.vizu_amg{
-    margin-top: 3%;
-    border-radius: 5%;
-    margin: 2%;
-    width: 70%;
-    height: 25px;
-    color: #FFF;
-    font-size: 12px;
-    padding: 3%;
-    margin-left: 10%;
-
-}
-.rem_amg{
-    border-radius: 5%;
-    margin: 2%;
-    width: 70%;
-    height: 25px;
-    color: #FFF;
-    font-size: 12px;
-    padding: 3%;
-    margin-left: 10%;
-}
-
-p {
-    color: #FFF;
-    font-family: "Montserrat", sans-serif;
-    font-size: 15px;
-}
-
-.card_button {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 4%;                                                                                                                                                                                                                                                                     
-}
-
-#btn_modificar {
+.movies {
     background-color: #737373;
-    width: 90px;
-    padding: 12px;
-    border-radius: 15px ;
-    color: rgb(253, 253, 253);
-    text-align: center;
-    font-size: 15px; 
-    border: 0;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    cursor: pointer;
+    height: 32vh;
+    width: 10vw;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 
-#btn_modificar:hover {
-    background-color: #959595;
-}
 
-#btn_remover {
-    background-color: #B60B0D;
-    width: 85px;
-    padding: 12px;
-    border-radius: 15px ;
-    color: rgb(253, 253, 253);
-    text-align: center;
-    font-size: 15px; 
-    border: 0;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    cursor: pointer;
-    margin-left: 3%;
-}
-
-#btn_remover:hover {
-    background-color: #df1013;
-}
-
-/* Estilo do botão de menu */
-.menu-btn {
-    display: none;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    background-color: #52057b;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.menu-btn i {
-    font-size: 20px;
-}
-
-/* Estilo do botão de menu */
-.menu-btn {
-    display: none;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    background-color: #52057b;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-.menu-btn i {
-    font-size: 20px;
-}
-
-/* Tablet Portrait size to standard 960 (devices and browsers) */
 @media only screen and (min-width: 768px) and (max-width: 959px) {
     .rate {
         font-size: 26px;
@@ -402,7 +479,7 @@ p {
     }
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+
 @media only screen and (min-width: 480px) and (max-width: 767px) {
     .rate {
         font-size: 25px;
@@ -423,7 +500,7 @@ p {
     }
 }
 
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+
 @media only screen and (max-width: 479px) {
     .rate { 
         font-size: 22px;
