--- a/rate/rate/src/app/paginas/Generos/generos.module.css
+++ b/rate/rate/src/app/paginas/Generos/generos.module.css
@@ -1,13 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
-    background-color: #474747 ;
+.body {
+    background-color: #474747;
 }
 
 
@@ -212,31 +207,6 @@ body {
     height: 240px;
     width: 160px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
-}
-
-.card_adc {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 4%;                                                                                                                                                                                                                                                                     
-}
-
-#btn_adc {
-    background-color: #52057B;
-    width: max-content;
-    padding: 12px;
-    border-radius: 0px ;
-    color: rgb(253, 253, 253);
-    text-align: center;
-    font-size: 15px; 
-    border: 0;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-#btn_adc:hover {
-    background-color: #7e198f;
 }
 
 /* Estilo do botão de menu */
