--- a/rate/rate/src/app/paginas/Favoritos/favoritos.module.css
+++ b/rate/rate/src/app/paginas/Favoritos/favoritos.module.css
@@ -1,20 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
+
+.body {
     background-color: #474747;
 }
 
 
 
-
+/* Barra lateral */
 .lateral_bar {
-    position: fixed ;
+    position: fixed;
     top: 0;
     height: 100%;
     width: 5%;
@@ -34,7 +30,6 @@ body {
     justify-self: center;
     align-self: center;
     flex-direction: column;
-
 }
 
 .botoes_acima {
@@ -60,7 +55,7 @@ body {
     align-self: center;
 }
 
-
+/* Cabeçalho */
 .header{
     width: 100%;
     height: 8vh;
@@ -81,7 +76,6 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-
 }
 
 .rate {
@@ -97,7 +91,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     margin-left: 12%;
-}        
+}                 
 
 .cinzacl{
     background-color: #737373;
@@ -181,20 +175,20 @@ body {
     gap: 5vh ;
 }
 
-.info_filme {
+.info_fav {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 3vh;
 }
 
-.filmes {
+.favs {
     color: #FFF;
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
 }
 
-.filmes h1 {
+.favs h1 {
     font-size: 20px;
 }
 
@@ -216,32 +210,32 @@ body {
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 
-.card_adc {
+.card_remover {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     margin-right: 4%;                                                                                                                                                                                                                                                                     
 }
 
-#btn_adc {
-    background-color: #52057B;
-    width: max-content;
-    padding: 12px;
-    border-radius: 0px ;
+.btn_remover {
+    background-color: #B60B0D;
+    width: 95px;
+    padding: 10px;
+    border-radius: 7px ;
     color: rgb(253, 253, 253);
     text-align: center;
     font-size: 15px; 
     border: 0;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
     cursor: pointer;
 }
 
-#btn_adc:hover {
-    background-color: #7e198f;
+.btn_remover:hover {
+    background-color: #df1013;
 }
 
-/* Estilo do botão de menu */
+
 .menu-btn {
     display: none;
     position: fixed;
