--- a/rate/rate/src/app/paginas/FilmesADM/filmes_ADM.module.css
+++ b/rate/rate/src/app/paginas/FilmesADM/filmes_ADM.module.css
@@ -1,20 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
+
+.body {
     background-color: #474747;
 }
 
 
 
-/* Barra lateral */
+
 .lateral_bar {
-    position: fixed;
+    position: fixed ;
     top: 0;
     height: 100%;
     width: 5%;
@@ -34,6 +30,7 @@ body {
     justify-self: center;
     align-self: center;
     flex-direction: column;
+
 }
 
 .botoes_acima {
@@ -59,7 +56,7 @@ body {
     align-self: center;
 }
 
-/* Cabeçalho */
+
 .header{
     width: 100%;
     height: 8vh;
@@ -80,6 +77,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+
 }
 
 .rate {
@@ -95,7 +93,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 12px;
     margin-left: 12%;
-}                 
+}        
 
 .cinzacl{
     background-color: #737373;
@@ -156,18 +154,7 @@ body {
     width: 40px;
 }
 
-/* .bloco{
-    background-color: #737373;
-    margin-bottom: 0;
-    height: 15%;
-    width: 15%;
-    min-height: 30%
-  
 
-} */
-
-
-/* Blocos */
 .blocos_filmes {
     padding-top: 122px;
     padding-left: 10%;
@@ -179,20 +166,20 @@ body {
     gap: 5vh ;
 }
 
-.info_fav {
+.info_filme {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 3vh;
 }
 
-.favs {
+.filmes {
     color: #FFF;
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
 }
 
-.favs h1 {
+.filmes h1 {
     font-size: 20px;
 }
 
@@ -214,29 +201,29 @@ body {
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 
-.card_remover {
+.card_adc {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     margin-right: 4%;                                                                                                                                                                                                                                                                     
 }
 
-#btn_remover {
-    background-color: #B60B0D;
-    width: 95px;
-    padding: 10px;
-    border-radius: 7px ;
+#btn_adc {
+    background-color: #52057B;
+    width: max-content;
+    padding: 12px;
+    border-radius: 0px ;
     color: rgb(253, 253, 253);
     text-align: center;
     font-size: 15px; 
     border: 0;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
     cursor: pointer;
 }
 
-#btn_remover:hover {
-    background-color: #df1013;
+#btn_adc:hover {
+    background-color: #7e198f;
 }
 
 /* Estilo do botão de menu */
