--- a/rate/rate/src/app/paginas/GenerosADM/generos_ADM.module.css
+++ b/rate/rate/src/app/paginas/GenerosADM/generos_ADM.module.css
@@ -1,13 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
-    background-color: #474747;
+
+.body {
+    background-color: #474747 ;
 }
 
 
@@ -168,7 +164,7 @@ body {
 
 
 /* Blocos */
-.blocos_filmes {
+.blocos_gen {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -179,29 +175,20 @@ body {
     gap: 5vh ;
 }
 
-.info_inicio {
+.info_gen {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 3vh;
 }
 
-.tit_film {
+.generos {
     color: #FFF;
     font-family: "Montserrat", sans-serif;
-}
-
-.tit_film h1 {
     font-size: 20px;
 }
 
-.tit_ator {
-    margin-top: 5vh;
-    color: #FFF;
-    font-family: "Montserrat", sans-serif;
-}
-
-.tit_ator h1 {
+.generos h1 {
     font-size: 20px;
 }
 
@@ -223,28 +210,28 @@ body {
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 
-.card_login {
+.card_adc {
     width: 100%;
     display: flex;
-    justify-content: flex-end;   
+    justify-content: flex-end;
     margin-right: 4%;                                                                                                                                                                                                                                                                     
 }
 
-#btn_login {
-    background-color: #52057b;
-    height: 35px;
-    width: 70px;
-    padding: 4px;
-    border-radius: 7px ;
+.btn_adc {
+    background-color: #52057B;
+    width: max-content;
+    padding: 12px;
+    border-radius: 0px ;
     color: rgb(253, 253, 253);
-    font-size: 17px; 
+    text-align: center;
+    font-size: 15px; 
     border: 0;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
     cursor: pointer;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
 }
 
-#btn_login:hover {
+.btn_adc:hover {
     background-color: #7e198f;
 }
 
