--- a/rate/rate/src/app/paginas/ModSugsAtor/add_ator.module.css
+++ b/rate/rate/src/app/paginas/ModSugsAtor/add_ator.module.css
@@ -1,76 +1,55 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.cards body {
-    font-family: Arial, sans-serif;
-    background-color: #2C2C2C;
-    color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-   
-}
-
 .cards {
-
+    margin-top: -5%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.back-button {
+
+.back_button {
     background-color: transparent;
     border: none;
     color: #fff;
     font-size: 35px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 20px;           
+    left: 20px; 
 }
 
 .back-button:hover {
     color: #ccc;
 }
 
-
-
-:root .container {
-    
-    background-color: #2C2C2C;
-    display: flex;
-    justify-content: center; 
-    align-items: center;     
-    height: 100vh;           
-    margin: 0;
+.container {
+    height: max-content;
+    width: 100%;
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
-    height: max-content;
-    margin-bottom: 40px;
-    width: 90%; 
+    margin: 40px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    
-  
-  }
-  
-h2 {
+}
+
+
+.h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
-.form-container {
+.form_container {
     height: 90%;
-    width: 90% ;
+    width: 90%;
 }
 
-.ator-image {
+.ator_image {
     width: 90%;
     height: 90%;
     max-width: 250px;
@@ -80,17 +59,17 @@ h2 {
     border-radius: 10px;
 }
 
-form {
+.atorForm {
     width: 100%;
 }
 
-label {
+#label {
     display: block;
     margin: 10px 0 5px;
     text-align: left;
 }
 
-input {
+.input {
     width: 100%;
     padding: 10px;
     border-radius: 5px;
@@ -100,21 +79,17 @@ input {
     color: white;
 }
 
-button {
+
+/* button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
     background-color: #52057B;
     color: white;
-}
+} */
 
-button#can {
-    background-color: #52057B;
-    
 
-}
-
-.img_classificacao {
+.img_classificacao{
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
@@ -127,45 +102,94 @@ button#can {
     align-items: center;
 }
 
-.ícone1,
-.ícone2,
-.ícone3,
-.ícone4,
-.ícone5,
-.ícone6 {
+.ícone1{
     width: 90%;
     height: 90%;
     max-width: 30px;
     max-height: 30px;
     object-fit: cover;
     border-radius: 10px;
-    margin-left: 10px;
+
 }
 
-.buto {
+.ícone2{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone3{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone4{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone5{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone6{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.buto{
     background-color: #3f3e3e;
 }
 
-#add {
+.add{
     padding: 3%;
     margin: 2%;
-}
-
-#can {
-    padding: 19.5%;
     font-size: 85%;
     background-color: #52057B;
 }
 
-#can:hover {
+.cance{
+    padding: 10.5%;
+    font-size: 85%;
+    margin: 2%;
+    background-color: #52057B;
+    
+}
+
+.cance:hover {
     background-color: #7e198f;
 }
 
-#add:hover {
+.add:hover {
     background-color: #7e198f;
 }
 
-.button-group {
+.button_group {
     display: flex;
     justify-content: center;
     align-items: center;
