--- a/rate/rate/src/app/paginas/PagInicialLogin/inicial_login.module.css
+++ b/rate/rate/src/app/paginas/PagInicialLogin/inicial_login.module.css
@@ -1,12 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
 
-body {
+
+.body {
     background-color: #474747;
 }
 
@@ -116,7 +112,7 @@ body {
     justify-content: center;
 }
 
-#lupa{
+.lupa{
     width: 80%;
     margin-left: 6%;
     margin-right: 14%;
@@ -168,7 +164,7 @@ body {
 
 
 /* Blocos */
-.blocos_gen {
+.blocos_filmes {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -179,20 +175,29 @@ body {
     gap: 5vh ;
 }
 
-.info_gen {
+.info_inicio {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 3vh;
 }
 
-.generos {
+.tit_film {
     color: #FFF;
     font-family: "Montserrat", sans-serif;
+}
+
+.tit_film h1 {
     font-size: 20px;
 }
 
-.generos h1 {
+.tit_ator {
+    margin-top: 5vh;
+    color: #FFF;
+    font-family: "Montserrat", sans-serif;
+}
+
+.tit_ator h1 {
     font-size: 20px;
 }
 
@@ -212,6 +217,31 @@ body {
     height: 240px;
     width: 160px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+}
+
+.card_login {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;   
+    margin-right: 4%;                                                                                                                                                                                                                                                                     
+}
+
+.btn_login {
+    background-color: #52057b;
+    height: 35px;
+    width: 70px;
+    padding: 4px;
+    border-radius: 7px ;
+    color: rgb(253, 253, 253);
+    font-size: 17px; 
+    border: 0;
+    cursor: pointer;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+}
+
+#btn_login:hover {
+    background-color: #7e198f;
 }
 
 /* Estilo do botão de menu */
@@ -259,7 +289,7 @@ body {
     }.movie {
         font-size: 10px;
     }
-    #lupa {
+    .lupa {
         font-size: 26px;
     }
     .botoes_perfil img {
@@ -280,7 +310,7 @@ body {
     .movie {
         font-size: 10px;
     }
-    #lupa {
+    .lupa {
         font-size: 22px;
     }
     .botoes_perfil img {
@@ -301,7 +331,7 @@ body {
     .movie {
         font-size: 9px;
     }
-    #lupa {
+    .lupa {
         font-size: 22px;
     }
     .botoes_perfil img {
@@ -322,7 +352,7 @@ body {
     .movie {
         font-size: 8px;
     }
-    #lupa {
+    .lupa {
         font-size: 20px;
     }
     .botoes_perfil img {
@@ -345,7 +375,7 @@ body {
     .movie {
         font-size: 8px;
     }
-    #lupa {
+    .lupa {
         font-size: 20px;
     }
     .botoes_perfil img {
